Ajustando query param para update

--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,8 @@
             "email": "julioclmafra@gmail.com"
         }
     ],
-    "require": {}
+    "require": {},
+    "files" : [
+        "src/app/helpers/helper.php"
+    ]
 }
